<resources>
    <string name="app_name">VOTTER</string>
    <string name="username">USERNAME</string>
    <string name="password">PASSWORD</string>
    <string name="log_in">LOG IN</string>
    <string name="name">NAME</string>
    <string name="age">AGE</string>
    <string name="register">REGISTER</string>
    <string name="log_out">LOG OUT</string>
    <string name="register_here">REGISTER HERE</string>
</resources>
