<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:layout_width="match_parent"
    android:weightSum="1">
         <TextView
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
             android:text="@string/username"    />
        <EditText
            android:id="@+id/etusername"
          android:layout_marginBottom="10dp"
          android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:inputType="none"
            android:layout_weight="0.03" />


        <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/password"
                                         />

        <EditText
            android:id="@+id/etpassword"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:inputType="textPassword"
            android:layout_weight="0.05" />
        <Button
            android:layout_width="138dp"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:id="@+id/blogin"
            android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/register_here"
        android:id="@+id/tvregister"
        android:layout_gravity="center_horizontal" />


</LinearLayout>
